2006-02-13  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  Bump version.

	* pykickstart/writer.py (KickstartWriter.doNetwork):  --onboot
	requires a value (#180987).

2006-02-10  Chris Lumens  <clumens@redhat.com>

	* pykickstart/parser.py:  Be more strict about commands that don't
	take any arguments.

2006-02-09  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  Bump version.

	* pykickstart/parser.py, pykickstart/writer.py:  Fix pychecker
	warnings.

	* pykickstart/parser.py (KSOption):  Condense all those option classes
	into a single one.

	 * pykickstart/parser.py (KickstartParser.readKickstart):  Allow
	 exceptions to not be fatal so ksvalidator can report multiple
	 problems in one pass.
	 (KickstartHandlers.deprecatedCommand):  Add line number to message.
	 (KSOptionParser.check_values):  Make deprecated option message more
	 helpful.

	* validator/ksvalidator:  Default to not following include files and
	to not halting on the first error.  Add options to change this
	behavior (#179894).

2006-02-08  Chris Lumens  <clumens@redhat.com>

	* pykickstart/parser.py (KickstartHandlers.doRaid):  --level is not
	strictly required since we should be able to infer it from
	--preexisting.

2006-02-01  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  Bump version.

	* pykickstart/parser.py (KickstartHandlers.doVnc):  No default port.

2006-01-31  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  Bump version.

	* pykickstart.py/writer.py (KickstartWriter.doDmRaid):  Add an initial
	value.
	(KickstartWriter.doPartition):  Handle None on partition size.
	
2006-01-30  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  Bump version.

	* pykickstart/parser.py (KickstartHandlers.doVnc):  Fix connecting to
	a remote viewer.  Deprecate --connect, and add --host and --port as
	the new preferred way (#179209).

2006-01-19  Chris Lumens  <clumens@redhat.com>
