@@ -1,5 +1,10 @@
 2006-02-13  Chris Lumens  <clumens@redhat.com>
 
+	* pykickstart/parser.py:  Don't trust ensure_value in complicated
+	cases in callbacks, as it wasn't setting values.
+
+2006-02-13  Chris Lumens  <clumens@redhat.com>
+
 	* pykickstart.spec, setup.py:  Bump version.
 
 	* pykickstart/writer.py (KickstartWriter.doNetwork):  --onboot
